# sensor-net-gateway-bl651

./: .gitignore  README.rst
box/: .gitignore  Makefile  README.md  model.FCStd
box/lib/: side.scad
box/src/: back.2d.scad  back.3d.scad  bottom.2d.scad  bottom.3d.scad  box_mount.2d.scad  box_mount.3d.scad  combined.scad  front.2d.scad  front.3d.scad  left.2d.scad  left.3d.scad  mounting.2d.scad  mounting.3d.scad  pcb_mount.2d.scad  pcb_mount.3d.scad  top.2d.scad  top.3d.scad
firmware/: Cargo.toml
firmware/src/: main.rs  radio.rs
kicad/sensor-net-gateway-bl651/: mcu.sch  power.sch  sensor-net-gateway-bl651-cache.lib  sensor-net-gateway-bl651.kicad_pcb  sensor-net-gateway-bl651.ods  sensor-net-gateway-bl651.pro  sensor-net-gateway-bl651.sch  sensor-net-gateway-bl651.step  sensor.sch  sym-lib-table  usb.sch
